# multibody-state-estimation

./: .gitignore  .gitpod.Dockerfile  CMakeLists.txt  Doxyfile  FourBar.YAML  README.md
2014-pf-paper/examples/pf_test1/: CMakeLists.txt
2014-pf-paper/libsparsembs/: CMakeLists.txt  SparseMBSConfigForInstall.cmake
2014-pf-paper/libsparsembs/src/: CAssembledRigidModel_build_generalized_forces.cpp  CDynamicSimulator_AugmentedLagrangian_Dense.cpp
2014-pf-paper/libsparsembs/tests/: CMakeLists.txt  test_fourbars.cpp  test_main.cpp
2015-pf-paper/: CMakeLists.txt  README.md
2015-pf-paper/examples/ex_four_bars/: main.cpp
2015-pf-paper/examples/pf_test1/: main.cpp
2015-pf-paper/libsparsembs/: UseSparseMBSForInstall.cmake.in
2015-pf-paper/libsparsembs/src/: CAssembledRigidModel_build_mass_matrix.cpp  CAssembledRigidModel_initial_pos.cpp  CDynamicSimulatorIndepBase.cpp  CDynamicSimulator_ALi3_Dense.cpp  CDynamicSimulator_AugmentedLagrangian_KLU.cpp  CDynamicSimulator_Indep_dense.cpp  CDynamicSimulator_Lagrange_KLU.cpp  CDynamicSimulator_R_matrix_dense.cpp  constraints.cpp  utils.cpp
libmbse/: CMakeLists.txt
libmbse/include/mbse/: AssembledRigidModel.h  Body.h  CAssembledRigidModel.h  CBody.h  CConstraintBase.h  CConstraintCommon.h  CConstraintConstantDistance.h  CConstraintFixedSlider.h  CConstraintMobileSlider.h  CConstraintRelativeAngle.h  CModelDefinition.h  CMultiBodyParticleFilter.h  FactorConstraints.h  FactorConstraintsVel.h  FactorDynamics.h  FactorEulerInt.h  FactorGyroscope.h  FactorInverseDynamics.h  FactorTrapInt.h  MRF_optimizer.h  ModelDefinition.h  MultiBodyParticleFilter.h  constraints.h  dynamic-simulators.h  factor-common.h  mbse-common.h  mbse-utils.h  mbse.h  model-examples.h  virtual-sensors.h
libmbse/src/: AssembledRigidModel_build_generalized_forces.cpp  AssembledRigidModel_build_mass_matrix.cpp  AssembledRigidModel_common.cpp  AssembledRigidModel_initial_pos.cpp  Body.cpp  CAssembledRigidModel_build_generalized_forces.cpp  CAssembledRigidModel_build_mass_matrix.cpp  CAssembledRigidModel_common.cpp  CAssembledRigidModel_initial_pos.cpp  CBody.cpp  CConstraintBase.cpp  CConstraintConstantDistance.cpp  CConstraintFixedSlider.cpp  CConstraintMobileSlider.cpp  CConstraintRelativeAngle.cpp  CDynamicSimulatorBase.cpp  CDynamicSimulatorIndepBase.cpp  CDynamicSimulator_ALi3_Dense.cpp  CDynamicSimulator_AugmentedLagrangian_Dense.cpp  CDynamicSimulator_AugmentedLagrangian_KLU.cpp  CDynamicSimulator_Indep_dense.cpp  CDynamicSimulator_Lagrange_CHOLMOD.cpp  CDynamicSimulator_Lagrange_KLU.cpp  CDynamicSimulator_Lagrange_LU_dense.cpp  CDynamicSimulator_Lagrange_UMFPACK.cpp  CDynamicSimulator_R_matrix_dense.cpp  CModelDefinition.cpp  CMultiBodyParticleFilter.cpp  FactorConstraints.cpp  FactorConstraintsVel.cpp  FactorDynamics.cpp  FactorEulerInt.cpp  FactorGyroscope.cpp  FactorInverseDynamics.cpp  FactorTrapInt.cpp  MRF_optimizer.cpp  ModelDefinition.cpp  MultiBodyParticleFilter.cpp  constraints.cpp  factor-common.cpp  (+3 more)
libmbse/src/constraints/: CConstraintBase.cpp  CConstraintConstantDistance.cpp  CConstraintFixedSlider.cpp  CConstraintMobileSlider.cpp  CConstraintRelativeAngle.cpp  CConstraintRelativeAngleAbsolute.cpp  ConstraintBase.cpp  ConstraintConstantDistance.cpp  ConstraintFixedSlider.cpp  ConstraintMobileSlider.cpp  ConstraintRelativeAngle.cpp  ConstraintRelativeAngleAbsolute.cpp  ConstraintRelativePosition.cpp
libmbse/src/dynamics/: CDynamicSimulatorBase.cpp  CDynamicSimulatorIndepBase.cpp  CDynamicSimulator_ALi3_Dense.cpp  CDynamicSimulator_AugmentedLagrangian_Dense.cpp  CDynamicSimulator_AugmentedLagrangian_KLU.cpp  CDynamicSimulator_Indep_dense.cpp  CDynamicSimulator_Lagrange_CHOLMOD.cpp  CDynamicSimulator_Lagrange_KLU.cpp  CDynamicSimulator_Lagrange_LU_dense.cpp  CDynamicSimulator_Lagrange_UMFPACK.cpp  CDynamicSimulator_R_matrix_dense.cpp  DynamicSimulatorBase.cpp  DynamicSimulatorIndepBase.cpp  DynamicSimulator_ALi3_Dense.cpp  DynamicSimulator_AugmentedLagrangian_Dense.cpp  DynamicSimulator_AugmentedLagrangian_KLU.cpp  DynamicSimulator_Indep_dense.cpp  DynamicSimulator_Lagrange_CHOLMOD.cpp  DynamicSimulator_Lagrange_KLU.cpp  DynamicSimulator_Lagrange_LU_dense.cpp  DynamicSimulator_Lagrange_UMFPACK.cpp  DynamicSimulator_R_matrix_dense.cpp
libmbse/src/factors/: FactorConstraints.cpp  FactorConstraintsIndep.cpp  (+10 more)
libmbse/tests/: CMakeLists.txt  dynamics-solvers.cpp  euler_integrator.cpp  factor-acc-constraints-icoords-jacobian.cpp  factor-constraints-icoords-jacobian.cpp  factor-constraints-jacobian.cpp  factor-dynamics-icoords-jacobian.cpp  factor-dynamics-jacobian.cpp  factor-euler-integrator.cpp  factor-gyroscope-jacobian.cpp  factor-icoords-dynamics-jacobian.cpp  factor-trapezoidal-integrator.cpp  factor-vel-constraints-icoords-jacobian.cpp  factor-vel-constraints-jacobian.cpp  fourbars.cpp  jacobian_dynamics.cpp  jacobian_gyroscope.cpp  model-from-yaml.cpp  test_main.cpp  trapezoidal_integrator.cpp
libsparsembs/: CMakeLists.txt  SparseMBSConfigForInstall.cmake  UseSparseMBSForInstall.cmake.in
libsparsembs/src/: CAssembledRigidModel_build_generalized_forces.cpp  CAssembledRigidModel_build_mass_matrix.cpp  CAssembledRigidModel_common.cpp  CAssembledRigidModel_initial_pos.cpp  CBody.cpp  CDynamicSimulatorBase.cpp  CDynamicSimulatorIndepBase.cpp  CDynamicSimulator_ALi3_Dense.cpp  CDynamicSimulator_AugmentedLagrangian_Dense.cpp  CDynamicSimulator_AugmentedLagrangian_KLU.cpp  CDynamicSimulator_Indep_dense.cpp  CDynamicSimulator_Lagrange_CHOLMOD.cpp  CDynamicSimulator_Lagrange_KLU.cpp  CDynamicSimulator_Lagrange_LU_dense.cpp  CDynamicSimulator_Lagrange_UMFPACK.cpp  CDynamicSimulator_R_matrix_dense.cpp  CModelDefinition.cpp  CMultiBodyParticleFilter.cpp  FactorConstraints.cpp  FactorConstraintsVel.cpp  FactorDynamics.cpp  FactorEulerInt.cpp  FactorGyroscope.cpp  FactorTrapInt.cpp  MRF_optimizer.cpp  constraints.cpp  factor-common.cpp  model-examples.cpp  utils.cpp  virtual-sensors.cpp
libsparsembs/tests/: CMakeLists.txt  euler_integrator.cpp  jacobian_dynamics.cpp  jacobian_gyroscope.cpp  test_fourbars.cpp  test_main.cpp  trapezoidal_integrator.cpp
(+131 files in other folders)
