project(pf_test1)

INCLUDE_DIRECTORIES(${SPARSEMBS_INCLUDE_DIRS})
LINK_DIRECTORIES(${SPARSEMBS_LIB_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${MRPT_LIBS} ${SPARSEMBS_LIBS})
ADD_DEPENDENCIES(${PROJECT_NAME} ${DEPENCENCIES_SPARSEMBS})
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Examples")
